# libuninameslist

./: .hgignore  .hgtags  ChangeLog  Makefile.am  buildnameslist.c  codepoint_arrays.c  configure.ac  en.names-db  fr.names-db  libuninameslist-fr.pc.in  libuninameslist.pc.in  libuninameslookup.pc.in  make-names-db.awk  make-names-list.awk  nameslist-fr.c  nameslist.c  uninameslookup.c  uninameslookup.h  uninameslookup.i.in  uninameslookup_internal.h
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  libuninameslist.pot
tests/: Makefile.am  atlocal.in  c_create_delete_uninameslookup.c  c_patch_test.c  create_delete_uninameslookup.py  cxx_create_delete_uninameslookup.cxx  cxx_patch_test.cxx  import_uninameslookup.py  patch_test.py  testsuite.at
